--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.button {
+  position: relative;
+  display: inline-block;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #DD0330;
+  color: white;
+  padding: 5px 10px;
+  box-shadow: inset 1px 1px 0 rgba(255,255,255,0.2);
+  text-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  text-transform: uppercase;
+  font-size: 1.2em;
+}
+
+.button:hover {
+  background-color: #C30E2E;
+}
+
+.button:active {
+  background-color: black;
+}
