--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,11 +1,21 @@
 
+ ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
 .setting {
   margin: 1em;
   display: flex;
   align-items: center;
   label {
     float: left;
-    width: 5em;
+    width: 7em;
     margin-right: 1.5em;
     color: brown;
     font-size: 1.3em;
