--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +9,7 @@ body {
   display: inline-block;
   border: 1px solid black;
   border-radius: 4px;
-  background-color: #DD0330;
+  background-color: $primary-color;
   color: white;
   padding: 5px 10px;
   box-shadow: inset 1px 1px 0 rgba(255,255,255,0.2);
@@ -18,9 +19,9 @@ body {
 }
 
 .button:hover {
-  background-color: #C30E2E;
+  background-color: $primary-color-faded;
 }
 
 .button:active {
-  background-color: black;
+  background-color: $dark-color;
 }
