Add footer and update start screen styles

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -5,7 +5,9 @@
   </h1>
 </div>
 <div class="dialog">
-  <h2>Set your options and get started.</h2>
+  <div class="title">
+    Set your options and get started.
+  </div>
   <div class="setting">
     <label>Field size</label>
     <ul>
@@ -28,5 +30,7 @@
       </li>
     </ul>
   </div>
-  <button class="button start" (click)="startGame()">Start</button>
+  <div class="action-bar">
+    <button class="button" (click)="startGame()">Start</button>
+  </div>
 </div>
