--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -10,13 +10,23 @@ li {
   display: inline;
 }
 
+.dialog {
+  border: 1px dotted black;
+  padding: 1.5em 1.5em;
+}
+
+.title {
+  margin-bottom: 1.7em;
+  font-size: 1.4em;
+}
+
 .setting {
-  margin: 1em;
+  margin: 1em 0 0 0;
   display: flex;
   align-items: center;
   label {
     float: left;
-    width: 7em;
+    width: 6em;
     margin-right: 1.5em;
     color: $primary-color;
     font-size: 1.3em;
@@ -31,7 +41,7 @@ li {
   padding: 0.7em 1.5em;
   border-radius: 4px;
   background-color: $light-color;
-  font-family: 'Courier New', Courier, monospace;
+  font-size: 1em;
   &:hover {
     background-color: $light-color-faded;
   }
@@ -39,17 +49,13 @@ li {
 
 .selected {
   background-color: $dark-color;
-  font-weight: bold;
   &:hover {
     background-color: $dark-color;
   }
 }
 
-.dialog {
-  border: 1px dotted black;
-  padding: 0.5em 2em;
-}
-
-.start {
-  float: right;
+.action-bar {
+  margin: 1em 0 0 0;
+  display: flex;
+  justify-content: flex-end;
 }
