--- a/src/app/game-field/game-field.component.html
+++ b/src/app/game-field/game-field.component.html
@@ -1,5 +1,7 @@
-<div class="field">
-  <div class="row" *ngFor="let y of heightArray()">
-    <app-game-tile *ngFor="let x of widthArray()" [yPos]=y [xPos]="x"></app-game-tile>
+<div class="field-container">
+  <div class="field">
+    <div class="row" *ngFor="let y of heightArray()">
+      <app-game-tile *ngFor="let x of widthArray()" [tile]="this.gameService.getTile(x, y)"></app-game-tile>
+    </div>
   </div>
 </div>
