--- a/src/app/game-field/game-field.component.scss
+++ b/src/app/game-field/game-field.component.scss
@@ -1,5 +1,12 @@
-.field {
+.field-container {
   margin: 0.5em;
+  display: flex;
+  justify-content: center;
+}
+
+.field {
+  border: 1px solid grey;
+  display: inline-block;
 }
 
 .row {
