--- a/src/app/game-tile/game-tile.component.html
+++ b/src/app/game-tile/game-tile.component.html
@@ -1,3 +1,12 @@
-<div class="tile">
-  {{ yPos }}:{{ xPos }}
+<div class="tile" (click)="onLeftClick()" (contextmenu)="onRightClick()"
+                  [ngClass]="{'uncovered': tile.uncovered,
+                              'n1': tile.text === '1',
+                              'n2': tile.text === '2',
+                              'n3': tile.text === '3',
+                              'n4': tile.text === '4',
+                              'n5': tile.text === '5',
+                              'n6': tile.text === '6',
+                              'n7': tile.text === '7',
+                              'n8': tile.text === '8'}">
+  {{tile.text}}
 </div>
