Implement remaining mines counter

--- a/src/app/game-top-bar/game-top-bar.component.html
+++ b/src/app/game-top-bar/game-top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="bar">
   <div class="count">
-    10 remaining
+    {{this.gameService.remainingMines}} remaining
   </div>
   <div class="logo">
     <img height="60" alt="Logo" src="/assets/images/logo.svg">
