Implement game timer

--- a/src/app/game-top-bar/game-top-bar.component.html
+++ b/src/app/game-top-bar/game-top-bar.component.html
@@ -6,6 +6,6 @@
     <img height="60" alt="Logo" src="/assets/images/logo.svg">
   </div>
   <div class="clock">
-    00:11
+    {{this.gameService.timerText}}
   </div>
 </div>
