Make footer links open in new tab

--- a/src/app/global-footer/global-footer.component.html
+++ b/src/app/global-footer/global-footer.component.html
@@ -1,5 +1,5 @@
 <div>
   <hr>
-  Made by <a href="https://twitter.com/stoneLeaf">@stoneLeaf</a>
-  / Fork on <a href="https://github.com/stoneLeaf/minesweeper-angular">GitHub</a>
+  Made by <a href="https://twitter.com/stoneLeaf" target="_blank">@stoneLeaf</a>
+  / Fork on <a href="https://github.com/stoneLeaf/minesweeper-angular" target="_blank">GitHub</a>
 </div>
