--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main-container">
+  <app-top-bar></app-top-bar>
   <router-outlet></router-outlet>
-  <app-global-footer></app-global-footer>
+  <app-footer></app-footer>
 </div>
