--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,25 @@
-<div style="text-align:center">
-    <img width="300" alt="Logo" src="/assets/images/logo.svg">
+<div class="dialog">
+  <div class="dialog-title">
+      About Minesweeper
+  </div>
+  <div class="container">
+    <div class="logo">
+      <img height="300" alt="Logo" src="/assets/images/logo.svg">
+    </div>
+    <div class="infos">
+      <p>Made as a learning project by Gabriel Bouyssou a.k.a. stoneLeaf.<br />
+        Check out my <a href="https://github.com/stoneLeaf" target="_blank">GitHub profile</a> and
+        <a href="https://twitter.com/stoneLeaf" target="_blank">Twitter feed</a>.</p>
+
+      <p>The look and feel was inspired by the original Minesweeper for Windows.</p>
+
+      <p>Built using <a href="https://angular.io/" target="_blank">Angular</a> CLI 7.1.4.<br />
+        Source is available on <a href="https://github.com/stoneLeaf/minesweeper-angular" target="_blank">GitHub</a>
+        under the <a href="https://github.com/stoneLeaf/minesweeper-angular/blob/master/LICENSE" target="_blank">MIT license</a>.</p>
+
+      <p>The logo is based on the <a href="https://angular.io/presskit" target="_blank">Angular logo</a>
+        which is under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>.<br />
+        All other graphics are by me and also under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>.</p>
+    </div>
+  </div>
 </div>
