--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -1,5 +1,5 @@
 <div class="dialog">
-  <div class="title">
+  <div class="dialog-title">
     Set your options and get started.
   </div>
   <div class="setting">
@@ -24,7 +24,7 @@
       </li>
     </ul>
   </div>
-  <div class="action-bar">
+  <div class="dialog-action-bar">
     <button class="button" (click)="startGame()">Start</button>
   </div>
 </div>
