--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
+<app-nav-bar></app-nav-bar>
 <div class="main-container">
-  <app-top-bar></app-top-bar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
