--- a/src/app/components/game-top-bar/game-top-bar.component.html
+++ b/src/app/components/game-top-bar/game-top-bar.component.html
@@ -2,8 +2,8 @@
   <div class="count">
     {{this.gameService.remainingMines}} remaining
   </div>
-  <div class="logo">
-    <img height="60" alt="Logo" src="/assets/images/logo.svg">
+  <div class="smiley">
+    <img (click)="newGame()" height="50" alt="Logo" src="/assets/images/face_happy.svg">
   </div>
   <div class="clock">
     {{this.gameService.timerText}}
