--- a/src/app/components/game-top-bar/game-top-bar.component.scss
+++ b/src/app/components/game-top-bar/game-top-bar.component.scss
@@ -1,4 +1,3 @@
-
 .bar {
   display: flex;
   justify-content: space-around;
@@ -9,6 +8,13 @@
 .count {
   text-align: center;
   width: 5em;
+}
+
+.smiley {
+  cursor: pointer;
+  img {
+    margin: 0.5em;
+  }
 }
 
 .clock {
