--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,21 @@
 @import "variables.scss";
 
+/** General */
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
 }
+
+a {
+  color: $primary-color;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+/** Common button */
 
 .button {
   position: relative;
@@ -16,6 +29,7 @@ body {
   text-shadow: 0 1px 1px rgba(0,0,0,0.2);
   text-transform: uppercase;
   font-size: 1.2em;
+  white-space: nowrap;
 }
 
 .button:hover {
@@ -24,4 +38,24 @@ body {
 
 .button:active {
   background-color: $dark-color;
+}
+
+/** Dialog */
+
+.dialog {
+  border: 1px solid $light-color;
+  padding: 1.5em 1.5em;
+  margin: 1em 0;
+  box-shadow: 5px 5px grey;
+}
+
+.dialog-title {
+  margin-bottom: 1.3em;
+  font-size: 1.4em;
+}
+
+.dialog-action-bar {
+  margin: 1em 0 0 0;
+  display: flex;
+  justify-content: flex-end;
 }
