Attach game top bar to game field

--- a/src/app/components/game-field/game-field.component.scss
+++ b/src/app/components/game-field/game-field.component.scss
@@ -1,11 +1,7 @@
-.field-container {
-  margin: 0.5em;
-  display: flex;
-  justify-content: center;
-}
+@import 'game.scss';
 
 .field {
-  border: 1px solid grey;
+  @extend .debossed;
   display: inline-block;
 }
 
