--- a/src/app/components/game-tile/game-tile.component.scss
+++ b/src/app/components/game-tile/game-tile.component.scss
@@ -1,6 +1,7 @@
-@import "variables.scss";
+@import "game.scss";
 
 .tile {
+  @extend .embossed;
   height: 1.2em;
   width: 1.2em;
   box-sizing: border-box;
@@ -9,13 +10,6 @@
   align-items: center;
   font-weight: 900;
   font-family: 'Courier New', Courier, monospace;
-  border-style: solid;
-  border-width: 0.2em;
-  border-top-color: white;
-  border-left-color: white;
-  border-bottom-color: #808080;
-  border-right-color: #808080;
-  background-color: #C0C0C0;
   user-select: none;
 }
 
