--- a/src/app/components/game-top-bar/game-top-bar.component.scss
+++ b/src/app/components/game-top-bar/game-top-bar.component.scss
@@ -1,23 +1,40 @@
+@import 'game.scss';
+
 .bar {
+  @extend .debossed;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  border: 1px dotted grey;
+  margin-bottom: 0.5em;
 }
 
-.count {
-  text-align: center;
-  width: 5em;
+.info {
+  padding: 0 0.5em;
+}
+
+.counter {
+  display: inline-block;
+  border: 1px solid darkgray;
+  background-color: black;
+  color: red;
+  padding: 0.2em;
+  font-size: 1.5em;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .smiley {
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0.5em;
   cursor: pointer;
-  img {
-    margin: 0.5em;
+  background-image: url(/assets/images/face_happy.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 0.2em;
+  background-origin: content-box;
+  box-sizing: border-box;
+  @extend .embossed;
+  &:active {
+    @extend .debossed;
   }
-}
-
-.clock {
-  text-align: center;
-  width: 5em;
 }
