--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="this.gameService.ready">
-  <app-game-top-bar></app-game-top-bar>
-  <app-game-field></app-game-field>
+<div *ngIf="this.gameService.ready" class="game-container">
+  <div class="game">
+    <app-game-top-bar></app-game-top-bar>
+    <app-game-field></app-game-field>
+  </div>
 </div>
