--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,7 +3,7 @@
 /** General */
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   margin: 0;
 }
 
