--- a/src/app/components/game-top-bar/game-top-bar.component.scss
+++ b/src/app/components/game-top-bar/game-top-bar.component.scss
@@ -14,12 +14,12 @@
 
 .counter {
   display: inline-block;
-  border: 1px solid darkgray;
+  border: 1px solid white;
   background-color: black;
   color: red;
-  padding: 0.2em;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
   font-size: 1.5em;
-  font-family: 'Courier New', Courier, monospace;
 }
 
 .smiley {
