--- a/src/app/components/game-tile/game-tile.component.html
+++ b/src/app/components/game-tile/game-tile.component.html
@@ -3,13 +3,12 @@
                               'flagged': tile.flagged,
                               'mined': tile.uncovered && tile.mined,
                               'clickedMine': tile.clickedMine,
-                              'n1': tile.text === '1',
-                              'n2': tile.text === '2',
-                              'n3': tile.text === '3',
-                              'n4': tile.text === '4',
-                              'n5': tile.text === '5',
-                              'n6': tile.text === '6',
-                              'n7': tile.text === '7',
-                              'n8': tile.text === '8'}">
-  {{tile.text}}
+                              'n1': tile.number === 1,
+                              'n2': tile.number === 2,
+                              'n3': tile.number === 3,
+                              'n4': tile.number === 4,
+                              'n5': tile.number === 5,
+                              'n6': tile.number === 6,
+                              'n7': tile.number === 7,
+                              'n8': tile.number === 8}">
 </div>
