--- a/src/app/components/game-tile/game-tile.component.scss
+++ b/src/app/components/game-tile/game-tile.component.scss
@@ -38,32 +38,56 @@
 
 .n1 {
   color: #0000FF;
+  &:before {
+    content: '1';
+  }
 }
 
 .n2 {
   color: #008000;
+  &:before {
+    content: '2';
+  }
 }
 
 .n3 {
   color: #FF0000;
+  &:before {
+    content: '3';
+  }
 }
 
 .n4 {
   color: #000080;
+  &:before {
+    content: '4';
+  }
 }
 
 .n5 {
   color: #942A2A;
+  &:before {
+    content: '5';
+  }
 }
 
 .n6 {
   color: #008484;
+  &:before {
+    content: '6';
+  }
 }
 
 .n7 {
   color: #000000;
+  &:before {
+    content: '7';
+  }
 }
 
 .n8 {
   color: #808080;
+  &:before {
+    content: '8';
+  }
 }
