Swtich game top bar counters to homemade svg graphics

--- a/src/app/components/game-top-bar/game-top-bar.component.html
+++ b/src/app/components/game-top-bar/game-top-bar.component.html
@@ -1,9 +1,39 @@
 <div class="bar">
   <div class="info">
-    <div class="counter">{{this.formatForDisplay(this.gameService.remainingMines, 3)}}</div>
+    <div class="counter">
+      <div *ngFor="let digit of minesDigits()"
+           [ngClass]="{'digit-hyphen': digit === '-',
+                       'digit-0': digit === '0',
+                       'digit-1': digit === '1',
+                       'digit-2': digit === '2',
+                       'digit-3': digit === '3',
+                       'digit-4': digit === '4',
+                       'digit-5': digit === '5',
+                       'digit-6': digit === '6',
+                       'digit-7': digit === '7',
+                       'digit-8': digit === '8',
+                       'digit-9': digit === '9'}">
+
+      </div>
+    </div>
   </div>
   <div class="smiley" (click)="newGame()"></div>
   <div class="info">
-    <div class="counter">{{this.formatForDisplay(this.gameService.secondsElapsed, 3)}}</div>
+    <div class="counter">
+      <div *ngFor="let digit of timerDigits()"
+            [ngClass]="{'digit-hyphen': digit === '-',
+                        'digit-0': digit === '0',
+                        'digit-1': digit === '1',
+                        'digit-2': digit === '2',
+                        'digit-3': digit === '3',
+                        'digit-4': digit === '4',
+                        'digit-5': digit === '5',
+                        'digit-6': digit === '6',
+                        'digit-7': digit === '7',
+                        'digit-8': digit === '8',
+                        'digit-9': digit === '9'}">
+
+      </div>
+    </div>
   </div>
 </div>
