--- a/src/app/components/game-top-bar/game-top-bar.component.html
+++ b/src/app/components/game-top-bar/game-top-bar.component.html
@@ -18,7 +18,12 @@
     </div>
   </div>
   <div class="smiley-container">
-    <div class="smiley" (click)="newGame()"></div>
+    <div class="smiley" (click)="newGame()"
+                        [ngClass]="{'face-surprise': uncovering === true,
+                                    'face-happy': gameStatus === 'running',
+                                    'face-over': gameStatus === 'lost',
+                                    'face-sunglasses': gameStatus === 'won'}">
+    </div>
   </div>
   <div class="info">
     <div class="counter">
