--- a/src/app/components/game-top-bar/game-top-bar.component.scss
+++ b/src/app/components/game-top-bar/game-top-bar.component.scss
@@ -86,7 +86,6 @@
   width: 2em;
   height: 2em;
   margin: 0.5em;
-  // display: inline-block;
   border: 1px solid $shadow-color;
 }
 
@@ -94,7 +93,6 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  background-image: url(/assets/images/face_happy.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-origin: content-box;
@@ -104,4 +102,20 @@
   &:active {
     @extend .debossed;
   }
+}
+
+.face-happy {
+  background-image: url(/assets/images/face_happy.svg);
+}
+
+.face-surprise {
+  background-image: url(/assets/images/face_surprise.svg);
+}
+
+.face-over {
+  background-image: url(/assets/images/face_over.svg);
+}
+
+.face-sunglasses {
+  background-image: url(/assets/images/face_sunglasses.svg);
 }
