--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -11,7 +11,7 @@
         Check out my <a href="https://github.com/stoneLeaf" target="_blank">GitHub profile</a> and
         <a href="https://twitter.com/stoneLeaf" target="_blank">Twitter feed</a>.</p>
 
-      <p>The look and feel was inspired by the original Minesweeper for Windows.</p>
+      <p>The look and feel is a tribute to the original Minesweeper for Windows.</p>
 
       <p>Built using <a href="https://angular.io/" target="_blank">Angular</a> CLI 7.1.4.<br />
         Source is available on <a href="https://github.com/stoneLeaf/minesweeper-angular" target="_blank">GitHub</a>
