Make current game a RxJS BehaviorSubject instead of a service property

--- a/src/app/components/game-field/game-field.component.html
+++ b/src/app/components/game-field/game-field.component.html
@@ -1,5 +1,5 @@
 <div class="field">
   <div class="row" *ngFor="let y of heightArray()">
-   <app-game-tile *ngFor="let x of widthArray()" [tile]="this.getGame().getTile(x, y)"></app-game-tile>
+   <app-game-tile *ngFor="let x of widthArray()" [tile]="this.currentGame.getTile(x, y)"></app-game-tile>
   </div>
 </div>
