--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="this.gameService.getCurrentGame().ready" class="game-container">
+<div class="game-container">
   <div class="game">
     <app-game-top-bar></app-game-top-bar>
     <app-game-field></app-game-field>
