Add custom class to active route link in nav bar

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,10 +8,10 @@
       <a class="button" routerLink="/">New Game</a>
     </div>
     <div class="nav-item">
-      <a class="button" routerLink="/options">Options</a>
+      <a class="button" routerLink="/options" routerLinkActive="active">Options</a>
     </div>
     <div class="nav-item">
-      <a class="button" routerLink="/about">About</a>
+      <a class="button" routerLink="/about" routerLinkActive="active">About</a>
     </div>
   </div>
 </nav>
